@@ -10,6 +10,9 @@ unity (7.4.0+16.04.20160715-0ubuntu2) UNRELEASED; urgency=medium
     calling them. (LP: #1605012)
   * Properly destroy close_button_ to properly disconnect lambda. (LP:
     #1605010)
+  * Use the standard notification-device-eject in the "device eject"
+    notification. This allows us to scale it properly on high-dpi
+    setups. (LP: #1605231)
 
   [ Marco Trevisan (Treviño) ]
   * Unity script: use result from unity_support_test to check the right
